--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
-    "react": "^18.2.0"
+    "method-override": "^3.0.0",
+    "react": "^16.14.0"
   }
 }
