--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-react-views": "^0.11.0",
     "method-override": "^3.0.0",
+    "mongoose": "^6.5.3",
     "react": "^16.14.0"
   }
 }
